--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^1.4.3",
     "jsonp": "^0.2.1",
     "mint-ui": "^2.2.9",
+    "moment": "^2.22.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.1.3",
