--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.1.3",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
