--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.22.0",
     "nprogress": "^0.2.0",
     "qs": "^6.5.1",
+    "sass": "^1.3.2",
     "v-tap": "^3.0.3",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
