--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "vue-lazyload": "^1.1.3",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "weixin-js-sdk": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
